[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
